--- a/dev/cashflow/dashboard.html
+++ b/dev/cashflow/dashboard.html
@@ -10,7 +10,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>SB Admin 2 - Blank</title>
+    <title>SB Admin 2 - Dashboard</title>
 
     <!-- Custom fonts for this template-->
     <link
@@ -25,12 +25,6 @@
 
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.min.css" rel="stylesheet" />
-
-    <!-- Lainnya -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-    />
   </head>
 
   <body id="page-top">
@@ -56,7 +50,7 @@
         <hr class="sidebar-divider my-0" />
 
         <!-- Nav Item - Dashboard -->
-        <li class="nav-item">
+        <li class="nav-item active">
           <a class="nav-link" href="index.html">
             <i class="fas fa-fw fa-tachometer-alt"></i>
             <span>Dashboard</span></a
@@ -134,9 +128,9 @@
         <div class="sidebar-heading">Addons</div>
 
         <!-- Nav Item - Pages Collapse Menu -->
-        <li class="nav-item active">
+        <li class="nav-item">
           <a
-            class="nav-link"
+            class="nav-link collapsed"
             href="#"
             data-toggle="collapse"
             data-target="#collapsePages"
@@ -148,7 +142,7 @@
           </a>
           <div
             id="collapsePages"
-            class="collapse show"
+            class="collapse"
             aria-labelledby="headingPages"
             data-parent="#accordionSidebar"
           >
@@ -162,7 +156,7 @@
               <div class="collapse-divider"></div>
               <h6 class="collapse-header">Other Pages:</h6>
               <a class="collapse-item" href="404.html">404 Page</a>
-              <a class="collapse-item active" href="blank.html">Blank Page</a>
+              <a class="collapse-item" href="blank.html">Blank Page</a>
             </div>
           </div>
         </li>
@@ -189,6 +183,24 @@
         <!-- Sidebar Toggler (Sidebar) -->
         <div class="text-center d-none d-md-inline">
           <button class="rounded-circle border-0" id="sidebarToggle"></button>
+        </div>
+
+        <!-- Sidebar Message -->
+        <div class="sidebar-card d-none d-lg-flex">
+          <img
+            class="sidebar-card-illustration mb-2"
+            src="img/undraw_rocket.svg"
+            alt="..."
+          />
+          <p class="text-center mb-2">
+            <strong>SB Admin Pro</strong> is packed with premium features,
+            components, and more!
+          </p>
+          <a
+            class="btn btn-success btn-sm"
+            href="https://startbootstrap.com/theme/sb-admin-pro"
+            >Upgrade to Pro!</a
+          >
         </div>
       </ul>
       <!-- End of Sidebar -->
@@ -492,160 +504,123 @@
           <!-- Begin Page Content -->
           <div class="container-fluid">
             <!-- Page Heading -->
-            <h1 class="h3 mb-4 text-gray-800">CashFlow OUT</h1>
+            <div
+              class="d-sm-flex align-items-center justify-content-between mb-4"
+            >
+              <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
+              <a
+                href="#"
+                class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"
+                ><i class="fas fa-download fa-sm text-white-50"></i> Generate
+                Report</a
+              >
+            </div>
 
-            <section class="section">
-              <div class="card">
-                <div class="card-body">
-                  <!-- Form Cash Flow Out -->
-                  <form id="myForm" action="javascript:void(0);">
-                    <!-- Date_CF -->
-                    <div class="row mb-3">
-                      <label for="date_CF" class="col-sm-2 col-form-label"
-                        >Date</label
-                      >
-                      <div class="col-sm-10">
-                        <input
-                          type="date"
-                          class="form-control"
-                          id="date_CF"
-                          name="date_CF"
-                          required
-                        />
+            <!-- Content Row -->
+            <div class="container-fluid">
+              <div class="row">
+                <!-- Card 1 -->
+                <div class="col-lg-6 mb-4">
+                  <div class="card border-left-primary shadow h-100 py-2">
+                    <div class="card-body">
+                      <div class="row no-gutters align-items-center">
+                        <div class="col mr-2">
+                          <div
+                            class="text-xs font-weight-bold text-primary text-uppercase mb-1"
+                          >
+                            Total Pemasukan
+                          </div>
+                          <div class="h5 mb-0 font-weight-bold text-gray-800">
+                            $40,000
+                          </div>
+                        </div>
                       </div>
                     </div>
-
-                    <!-- Category_CF -->
-                    <div class="row mb-3">
-                      <label for="category_CF" class="col-sm-2 col-form-label"
-                        >Category</label
-                      >
-                      <div class="col-sm-10">
-                        <select
-                          class="form-control"
-                          id="category_CF"
-                          name="category_CF"
-                          aria-label="Select Category"
-                          required
-                        >
-                          <option value="" selected disabled>
-                            Select a category
-                          </option>
-                          <!-- Options will be filled dynamically -->
-                        </select>
+                  </div>
+                </div>
+                <!-- Card 2 -->
+                <div class="col-lg-6 mb-4">
+                  <div class="card border-left-primary shadow h-100 py-2">
+                    <div class="card-body">
+                      <div class="row no-gutters align-items-center">
+                        <div class="col mr-2">
+                          <div
+                            class="text-xs font-weight-bold text-primary text-uppercase mb-1"
+                          >
+                            Total Pengeluaran
+                          </div>
+                          <div class="h5 mb-0 font-weight-bold text-gray-800">
+                            $40,000
+                          </div>
+                        </div>
                       </div>
                     </div>
-
-                    <!-- Sub-Category_CF -->
-                    <div class="row mb-3">
-                      <label
-                        for="sub_category_CF"
-                        class="col-sm-2 col-form-label"
-                        >Sub-Category</label
-                      >
-                      <div class="col-sm-10">
-                        <select
-                          class="form-control"
-                          id="sub_category_CF"
-                          name="sub_category_CF"
-                          aria-label="Select Sub-Category"
-                          required
-                        >
-                          <option value="" selected disabled>
-                            Select a sub-category
-                          </option>
-                          <!-- Options will be filled dynamically -->
-                        </select>
-                      </div>
-                    </div>
-
-                    <!-- Description_CF -->
-                    <div class="row mb-3">
-                      <label
-                        for="description_CF"
-                        class="col-sm-2 col-form-label"
-                        >Description</label
-                      >
-                      <div class="col-sm-10">
-                        <input
-                          type="text"
-                          class="form-control"
-                          id="description_CF"
-                          name="description_CF"
-                          required
-                        />
-                      </div>
-                    </div>
-
-                    <!-- Amount_CF -->
-                    <div class="row mb-3">
-                      <label for="amount_CF" class="col-sm-2 col-form-label"
-                        >Amount</label
-                      >
-                      <div class="col-sm-10">
-                        <input
-                          type="text"
-                          class="form-control"
-                          id="amount_CF"
-                          name="amount_CF"
-                          required
-                        />
-                      </div>
-                    </div>
-
-                    <!-- Payment_Method_CF -->
-                    <div class="row mb-3">
-                      <label
-                        for="payment_method_CF"
-                        class="col-sm-2 col-form-label"
-                        >Payment Method</label
-                      >
-                      <div class="col-sm-10">
-                        <select
-                          class="form-control"
-                          id="payment_method_CF"
-                          name="payment_method_CF"
-                          aria-label="Select Payment Method"
-                          required
-                        >
-                          <option value="" selected disabled>
-                            Select a payment method
-                          </option>
-                          <option value="gaji">Gaji</option>
-                          <option value="pendapatan_usaha">
-                            Pendapatan Usaha
-                          </option>
-                          <option value="investasi">Investasi</option>
-                          <option value="hadiah">Hadiah</option>
-                          <option value="pengembalian_pajak">
-                            Pengembalian Pajak
-                          </option>
-                          <option value="sumber_lain">Sumber Lain</option>
-                          <option value="bonus_insentif">
-                            Bonus dan Insentif
-                          </option>
-                          <option value="komisi">Komisi</option>
-                        </select>
-                      </div>
-                    </div>
-
-                    <!-- Submit Button -->
-                    <div class="row mb-3">
-                      <div class="col-sm-10 offset-sm-2">
-                        <button
-                          type="submit"
-                          class="btn btn-primary"
-                          onclick="submitFormOut()"
-                        >
-                          Submit Form
-                        </button>
-                      </div>
-                    </div>
-                  </form>
-                  <!-- End Form Cash Flow Out -->
+                  </div>
                 </div>
               </div>
-            </section>
+
+              <div class="row">
+                <!-- Card 3 -->
+                <div class="col-md-4 mb-4">
+                  <div class="card border-left-primary shadow h-100 py-2">
+                    <div class="card-body">
+                      <div class="row no-gutters align-items-center">
+                        <div class="col mr-2">
+                          <div
+                            class="text-xs font-weight-bold text-primary text-uppercase mb-1"
+                          >
+                            Total Pemasukan Bulan Ini
+                          </div>
+                          <div class="h5 mb-0 font-weight-bold text-gray-800">
+                            $40,000
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card 4 -->
+                <div class="col-md-4 mb-4">
+                  <div class="card border-left-primary shadow h-100 py-2">
+                    <div class="card-body">
+                      <div class="row no-gutters align-items-center">
+                        <div class="col mr-2">
+                          <div
+                            class="text-xs font-weight-bold text-primary text-uppercase mb-1"
+                          >
+                            Total Pemasukan Bulan Ini
+                          </div>
+                          <div class="h5 mb-0 font-weight-bold text-gray-800">
+                            $40,000
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card 5 -->
+                <div class="col-md-4 mb-4">
+                  <div class="card border-left-primary shadow h-100 py-2">
+                    <div class="card-body">
+                      <div class="row no-gutters align-items-center">
+                        <div class="col mr-2">
+                          <div
+                            class="text-xs font-weight-bold text-primary text-uppercase mb-1"
+                          >
+                            Sisa
+                          </div>
+                          <div class="h5 mb-0 font-weight-bold text-gray-800">
+                            $40,000
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Content Row -->
           </div>
           <!-- /.container-fluid -->
         </div>
@@ -655,7 +630,7 @@
         <footer class="sticky-footer bg-white">
           <div class="container my-auto">
             <div class="copyright text-center my-auto">
-              <span>Copyright &copy; Your Website 2020</span>
+              <span>Copyright &copy; Your Website 2021</span>
             </div>
           </div>
         </footer>
@@ -719,8 +694,11 @@
     <!-- Custom scripts for all pages-->
     <script src="js/sb-admin-2.min.js"></script>
 
-    <!-- JavaScript Lainnya -->
-    <script src="js/scripts.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Page level plugins -->
+    <script src="vendor/chart.js/Chart.min.js"></script>
+
+    <!-- Page level custom scripts -->
+    <script src="js/demo/chart-area-demo.js"></script>
+    <script src="js/demo/chart-pie-demo.js"></script>
   </body>
 </html>
