--- a/dev/cashflow/tes.html
+++ b/dev/cashflow/tes.html
@@ -25,12 +25,6 @@
 
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.min.css" rel="stylesheet" />
-
-    <!-- Lainnya -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-    />
   </head>
 
   <body id="page-top">
@@ -492,160 +486,14 @@
           <!-- Begin Page Content -->
           <div class="container-fluid">
             <!-- Page Heading -->
-            <h1 class="h3 mb-4 text-gray-800">CashFlow OUT</h1>
-
-            <section class="section">
-              <div class="card">
-                <div class="card-body">
-                  <!-- Form Cash Flow Out -->
-                  <form id="myForm" action="javascript:void(0);">
-                    <!-- Date_CF -->
-                    <div class="row mb-3">
-                      <label for="date_CF" class="col-sm-2 col-form-label"
-                        >Date</label
-                      >
-                      <div class="col-sm-10">
-                        <input
-                          type="date"
-                          class="form-control"
-                          id="date_CF"
-                          name="date_CF"
-                          required
-                        />
-                      </div>
-                    </div>
-
-                    <!-- Category_CF -->
-                    <div class="row mb-3">
-                      <label for="category_CF" class="col-sm-2 col-form-label"
-                        >Category</label
-                      >
-                      <div class="col-sm-10">
-                        <select
-                          class="form-control"
-                          id="category_CF"
-                          name="category_CF"
-                          aria-label="Select Category"
-                          required
-                        >
-                          <option value="" selected disabled>
-                            Select a category
-                          </option>
-                          <!-- Options will be filled dynamically -->
-                        </select>
-                      </div>
-                    </div>
-
-                    <!-- Sub-Category_CF -->
-                    <div class="row mb-3">
-                      <label
-                        for="sub_category_CF"
-                        class="col-sm-2 col-form-label"
-                        >Sub-Category</label
-                      >
-                      <div class="col-sm-10">
-                        <select
-                          class="form-control"
-                          id="sub_category_CF"
-                          name="sub_category_CF"
-                          aria-label="Select Sub-Category"
-                          required
-                        >
-                          <option value="" selected disabled>
-                            Select a sub-category
-                          </option>
-                          <!-- Options will be filled dynamically -->
-                        </select>
-                      </div>
-                    </div>
-
-                    <!-- Description_CF -->
-                    <div class="row mb-3">
-                      <label
-                        for="description_CF"
-                        class="col-sm-2 col-form-label"
-                        >Description</label
-                      >
-                      <div class="col-sm-10">
-                        <input
-                          type="text"
-                          class="form-control"
-                          id="description_CF"
-                          name="description_CF"
-                          required
-                        />
-                      </div>
-                    </div>
-
-                    <!-- Amount_CF -->
-                    <div class="row mb-3">
-                      <label for="amount_CF" class="col-sm-2 col-form-label"
-                        >Amount</label
-                      >
-                      <div class="col-sm-10">
-                        <input
-                          type="text"
-                          class="form-control"
-                          id="amount_CF"
-                          name="amount_CF"
-                          required
-                        />
-                      </div>
-                    </div>
-
-                    <!-- Payment_Method_CF -->
-                    <div class="row mb-3">
-                      <label
-                        for="payment_method_CF"
-                        class="col-sm-2 col-form-label"
-                        >Payment Method</label
-                      >
-                      <div class="col-sm-10">
-                        <select
-                          class="form-control"
-                          id="payment_method_CF"
-                          name="payment_method_CF"
-                          aria-label="Select Payment Method"
-                          required
-                        >
-                          <option value="" selected disabled>
-                            Select a payment method
-                          </option>
-                          <option value="gaji">Gaji</option>
-                          <option value="pendapatan_usaha">
-                            Pendapatan Usaha
-                          </option>
-                          <option value="investasi">Investasi</option>
-                          <option value="hadiah">Hadiah</option>
-                          <option value="pengembalian_pajak">
-                            Pengembalian Pajak
-                          </option>
-                          <option value="sumber_lain">Sumber Lain</option>
-                          <option value="bonus_insentif">
-                            Bonus dan Insentif
-                          </option>
-                          <option value="komisi">Komisi</option>
-                        </select>
-                      </div>
-                    </div>
-
-                    <!-- Submit Button -->
-                    <div class="row mb-3">
-                      <div class="col-sm-10 offset-sm-2">
-                        <button
-                          type="submit"
-                          class="btn btn-primary"
-                          onclick="submitFormOut()"
-                        >
-                          Submit Form
-                        </button>
-                      </div>
-                    </div>
-                  </form>
-                  <!-- End Form Cash Flow Out -->
-                </div>
-              </div>
-            </section>
+            <h1 class="h3 mb-4 text-gray-800">Blank Page</h1>
+            <h1>Google Sheets Embed Example</h1>
+            <iframe
+              src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRMJqejlsW6hp-UajyGwsPJLtEBC8ZsHeBxziAoJgH9m6rva-RkUIVmsB8O2ijMqLhCL2GVlA1IcSVW/pubhtml?gid=2075824252&single=true"
+              width="100%"
+              height="600"
+              frameborder="0"
+            ></iframe>
           </div>
           <!-- /.container-fluid -->
         </div>
@@ -718,9 +566,5 @@
 
     <!-- Custom scripts for all pages-->
     <script src="js/sb-admin-2.min.js"></script>
-
-    <!-- JavaScript Lainnya -->
-    <script src="js/scripts.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
