--- a/dev/Template-1/index.html
+++ b/dev/Template-1/index.html
@@ -7,13 +7,16 @@
 
 		<!-- Bootstrap CSS -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet" />
 		<!-- AOS -->
 		<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
 		<!-- Google Font -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&display=swap" rel="stylesheet" />
 
 		<!-- ADD CSS -->
 		<link rel="stylesheet" href="assets/css/style.css" />
@@ -27,7 +30,7 @@
 					<img src="assets/img/AA-3.png" class="img-fluid" alt="" />
 				</div>
 				<div class="salam-body" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
-					<h3>Assalamu'alaikum Wr.Wb.</h3>
+					<h4>Assalamu'alaikum Wr.Wb.</h4>
 					<p>Tanpa mengurangi rasa hormat, kami bermaksud mengundang apak/ Ibu/ Saudara/ I pada acara resepsi pernikahan kami.</p>
 				</div>
 				<div class="col-12 p-0 salam-footer d-flex align-items-end" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="1000">
@@ -195,11 +198,11 @@
 				</div>
 				<div class="hadiah-body" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
 					<h3>Kirim Hadiah</h3>
-					<p>
+					<h6>
 						Doa Restu Anda merupakan karunia yang sangat berarti bagi kami.
 						<br /><br />
 						Namun jika Anda ingin memberikan hadiah, kami sediakan fitur berikut:
-					</p>
+					</h6>
 					<!-- Button trigger modal -->
 					<button type="button" class="btn btn-outline-light alamat-btn" data-bs-toggle="modal" data-bs-target="#transfer">Transfer</button>
 					<button type="button" class="btn btn-outline-light alamat-btn" data-bs-toggle="modal" data-bs-target="#kado">Kado</button>
@@ -208,14 +211,21 @@
 					<div class="modal fade" id="transfer" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 						<div class="modal-dialog">
 							<div class="modal-content">
-								<div class="modal-header">
-									<h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-									<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-								</div>
-								<div class="modal-body">...</div>
-								<div class="modal-footer">
-									<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-									<button type="button" class="btn btn-primary">Save changes</button>
+								<div class="modal-body">
+									<h5>BCA - Iqbal Maulana</h5>
+									<p id="text-to-copy-1">
+										123456
+										<button class="btn btn-outline-primary" onclick="copyText('text-to-copy-1')">
+											<i class="bi bi-clipboard"></i>
+										</button>
+									</p>
+									<h5>BCA - Nur Fauziah</h5>
+									<p id="text-to-copy-2">
+										654321
+										<button class="btn btn-outline-primary" onclick="copyText('text-to-copy-2')">
+											<i class="bi bi-clipboard"></i>
+										</button>
+									</p>
 								</div>
 							</div>
 						</div>
@@ -223,14 +233,14 @@
 					<div class="modal fade" id="kado" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 						<div class="modal-dialog">
 							<div class="modal-content">
-								<div class="modal-header">
-									<h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-									<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-								</div>
-								<div class="modal-body">...</div>
-								<div class="modal-footer">
-									<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-									<button type="button" class="btn btn-primary">Save changes</button>
+								<div class="modal-body">
+									<h5>Kirim kado ke alamat</h5>
+									<p id="text-to-copy-3">
+										Perumahan Dasana Indah, Blok UF 12/14, RT/RW 004/026,Bojong Nangka, Kelapa Dua
+										<button class="btn btn-outline-primary" onclick="copyText('text-to-copy-3')">
+											<i class="bi bi-clipboard"></i>
+										</button>
+									</p>
 								</div>
 							</div>
 						</div>
@@ -244,7 +254,9 @@
 
 		<!-- Optional JavaScript -->
 		<script src="assets/js/script.js"></script>
+
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 		<!-- AOS -->
