--- a/dev/Template-1/index.html
+++ b/dev/Template-1/index.html
@@ -202,16 +202,35 @@
 			<div class="rsvp-body" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
 				<h3>Kirim Ucapan</h3>
 				<div id="commentSection"></div>
-				<!-- Kontainer untuk Nama dan Komentar -->
+				<button type="button" class="btn btn-outline-light m-2" data-bs-toggle="modal"
+					data-bs-target="#exampleModal">
+					Kirim Ucapan
+				</button>
 
-				<script>
-
-				</script>
-
-
+				<!-- Modal -->
+				<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+					aria-hidden="true">
+					<div class="modal-dialog">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h1 class="modal-title fs-5" id="exampleModalLabel">Kirim Ucapan</h1>
+								<button type="button" class="btn-close" data-bs-dismiss="modal"
+									aria-label="Close"></button>
+							</div>
+							<div class="modal-body">
+								...
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+								<button type="button" class="btn btn-primary">Save changes</button>
+							</div>
+						</div>
+					</div>
+				</div>
 
 
 			</div>
+
 			<!-- <div class="col-12 p-0 rsvp-footer d-flex align-items-end" data-aos="fade-up" data-aos-easing="linear"
 				data-aos-duration="1000">
 				<img src="assets/img/AB-3.png" class="img-fluid" alt="" />
