--- a/dev/Template-1/index.html
+++ b/dev/Template-1/index.html
@@ -40,7 +40,13 @@
 					<br /><br /><br /><br /><br /><br />
 					<p>KEPADA YTH</p>
 					<h6 id="guestNames">TAMU UNDANGAN</h6>
-					<a class="btn btn-outline-light alamat-btn" href="#salam" role="button" id="openButton"><i class="bi bi-envelope-open-heart"></i> OPEN INVITATION</a>
+					<a class="btn btn-outline-light alamat-btn" onclick="playAudio()" href="#salam" role="button" id="openButton"><i class="bi bi-envelope-open-heart"></i> OPEN INVITATION</a>
+					<audio id="myAudio" autoplay loop>
+						<source src="assets/audio/audio.mp3" type="audio/mpeg" />
+						Your browser does not support the audio element.
+					</audio>
+
+					<!-- <button onclick="playAudio()" type="button">Play Audio</button> -->
 				</div>
 
 				<div class="col-12 p-0 cover-footer d-flex align-items-end" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="1000">
@@ -52,14 +58,14 @@
 		<section id="salam" class="salam" style="display: none">
 			<div class="row p-0 m-0 salam-content text-center">
 				<div class="col-12 p-0 salam-title" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
-					<img src="assets/img/AA-3.png" class="img-fluid" alt="" />
+					<!-- <img src="assets/img/AA-3.png" class="img-fluid" alt="" /> -->
 				</div>
 				<div class="salam-body" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
 					<h4>Assalamu'alaikum Wr.Wb.</h4>
 					<p>Tanpa mengurangi rasa hormat, kami bermaksud mengundang apak/ Ibu/ Saudara/ I pada acara resepsi pernikahan kami.</p>
 				</div>
 				<div class="col-12 p-0 salam-footer d-flex align-items-end" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="1000">
-					<img src="assets/img/AB-3.png" class="img-fluid" alt="" />
+					<!-- <img src="assets/img/AB-3.png" class="img-fluid" alt="" /> -->
 				</div>
 			</div>
 		</section>
@@ -169,7 +175,7 @@
 					<img src="assets/img/AA-3.png" class="img-fluid" alt="" />
 				</div>
 				<div class="galeri-body row" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
-					<div class="col-6">
+					<!-- <div class="col-6">
 						<img src="assets/galeri/gal1.jpg" alt="Galeri1" class="img-thumbnail" />
 					</div>
 					<div class="col-6">
@@ -180,6 +186,25 @@
 					</div>
 					<div class="col-6">
 						<img src="assets/galeri/gal4.jpg" alt="Galeri4" class="img-thumbnail" />
+					</div>
+					<div class="col-6">
+						<img src="assets/galeri/gal1.jpg" alt="Galeri3" class="img-thumbnail" />
+					</div>
+					<div class="col-6">
+						<img src="assets/galeri/gal2.jpg" alt="Galeri4" class="img-thumbnail" />
+					</div> -->
+					<div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-bs-ride="carousel">
+						<div class="carousel-inner">
+							<div class="carousel-item active" data-bs-interval="2500">
+								<img src="assets/galeri/gal1.jpg" alt="Galeri1" class="d-block w-100" />
+							</div>
+							<div class="carousel-item" data-bs-interval="2500">
+								<img src="assets/galeri/gal2.jpg" alt="Galeri2" class="d-block w-100" />
+							</div>
+							<div class="carousel-item" data-bs-interval="2500">
+								<img src="assets/galeri/gal3.jpg" alt="Galeri3" class="d-block w-100" />
+							</div>
+						</div>
 					</div>
 				</div>
 				<div class="col-12 p-0 galeri-footer d-flex align-items-end" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="1000">
@@ -304,6 +329,18 @@
 				</div>
 			</div>
 		</section>
+
+		<script>
+			var x = document.getElementById('myAudio');
+
+			function playAudio() {
+				if (x.paused) {
+					x.play();
+				} else {
+					x.pause();
+				}
+			}
+		</script>
 
 		<!-- Jquery -->
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
